--- a/web/app/views/header.html
+++ b/web/app/views/header.html
@@ -1,15 +1,11 @@
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color: #333333">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#" ui-sref="Home">Accueil</a>
+            <a class="navbar-brand" style="color: white" href="#" ui-sref="Editor">Accueil</a>
         </div>
-
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#"  ui-sref="About">About</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#"  ui-sref="Editor">Editor</a></li>
+                <li><a href="#"  style="color: white" ui-sref="About">A Propos</a></li>
             </ul>
         </div>
     </div>
