--- a/web/app/views/about.html
+++ b/web/app/views/about.html
@@ -1,2 +1,11 @@
-<h2>About us</h2>
-<p> Tout le blabla habituel : Qui on est ? Pourquoi ce site ? Qu'est ce qu'Epitech ? etc...</p>
+<h2>A Propos</h2>
+<h3> Qui sommes-nous ?</h3>
+<p> Ce site web a été réalisé par <b>Youri Gicquel</b>, <b>Manon Delanoy</b>, <b>Thomas Martin</b> et <b>Romain Favre</b>, étudiants d'Epiteh Lyon.</p>
+<p> Epitech est une école d'expertise informatique et offre à ses étudiants un cursus en 5 ans. Tous les membres de ce projet sont en fin de troisième année.</p>
+
+<h3> Pourquoi ce projet ? </h3>
+<p> Cette interface web a été developpée dans le cadre d'un projet de fin de troisième année, impliquant un travail de groupe de plusieurs mois. Nous étions désireux de découvrir les technologies web et de developper un outil utile et performant.</p>
+<p> C'est donc ainsi qu'est né notre projet.</p>
+
+<h3> Le projet en quelques mots ...</h3>
+<p> Son fonctionnement est simple: Il suffit d'entrer le code voulu dans l'éditeur prévu à cet effet (voir <a href="editor.html" style="color: grey">Editeur</a>) et d'envoyer son code au compilateur via le bouton COMPILER. Si le code est correct, la mention OK apparaitra, sinon KO.</p>
