--- a/web/app/views/editor.html
+++ b/web/app/views/editor.html
@@ -1,19 +1,32 @@
 <div ng-controller="editorCtrl">
-<style type="text/css" media="screen">
-    #editor {
-        position: fixed;
-        top: 20%;
-        right: 0%;
-        bottom: 0;
-        left: 5%;
-    }
-</style>
-<h2>Notre merveilleux editeur de texte en ligne !</h2>
-<p> Il est tout à fait possible de changer sa taille, sa position ainsi que son theme. Je suis trop une fille dark alors j'ai laissé celui ci, mais on peut le mettre en clair !</p>
-<div id="editor" style="max-height: 50%; max-width: 50%; border: solid 3px gray;">void      main()
-    {
-    }
-    </div>
+    <h2>Notre editeur de texte en ligne !</h2>
 
-<button ng-click="comp()" type="button" class="btn btn-success">Success</button>
+    <div class="row">
+        <div class="col-md-8">
+            <div id="editor" style=" min-height: 600px; border: solid 3px gray;">void main()
+                {
+                }
+            </div>
+        </div>
+        <div class="col-md-4 well">
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="col-md-4">
+                <button ng-click="comp()" type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok" ></span></button>
+                    </div>
+                    <div class="col-md-8">
+                        <p><b>Compiler</b></p>
+                    </div>
+                </div>
+                <div class="col-md-7">
+                    <div class="col-md-4">
+                    <button ng-click="dest()" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" ></span></button>
+                    </div>
+                    <div class="col-md-8">
+                        <p><b>Vider l'editeur</b></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
