--- a/web/app/views/about.html
+++ b/web/app/views/about.html
@@ -1,11 +1,52 @@
-<h2>A Propos</h2>
-<h3> Qui sommes-nous ?</h3>
-<p> Ce site web a été réalisé par <b>Youri Gicquel</b>, <b>Manon Delanoy</b>, <b>Thomas Martin</b> et <b>Romain Favre</b>, étudiants d'Epiteh Lyon.</p>
-<p> Epitech est une école d'expertise informatique et offre à ses étudiants un cursus en 5 ans. Tous les membres de ce projet sont en fin de troisième année.</p>
+<h2 style="font-weight: bold" >A Propos</h2>
+<h3 style="font-weight: bold"> Qui sommes-nous ?</h3>
+<p style="opacity: 0.75"> Ce site web a été réalisé par <b>Youri Gicquel</b>, <b>Manon Delanoy</b>, <b>Thomas Martin</b> et <b>Romain Favre</b>, étudiants d'Epitech Lyon.</p>
+<p style="opacity: 0.75"> Epitech est une école d'expertise informatique et offre à ses étudiants un cursus en 5 ans. Tous les membres de ce projet sont en fin de troisième année.</p>
 
-<h3> Pourquoi ce projet ? </h3>
-<p> Cette interface web a été developpée dans le cadre d'un projet de fin de troisième année, impliquant un travail de groupe de plusieurs mois. Nous étions désireux de découvrir les technologies web et de developper un outil utile et performant.</p>
-<p> C'est donc ainsi qu'est né notre projet.</p>
+<div class="row">
+    <div class="col-md-12">
+    <div class="col-sm-2 col-md-3">
+        <div class="thumbnail">
+            <img src="https://cdn.local.epitech.eu/userprofil/profilview/delano_m.jpg" alt="Manon Delanoy">
+            <div class="caption">
+                <h3>Manon Delanoy</h3>
+                <p> Chef de projet - en charge de la partie Front et Api</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2 col-md-3">
+        <div class="thumbnail">
+            <img src="https://cdn.local.epitech.eu/userprofil/profilview/gicque_y.jpg" alt="Youri Gicquel">
+            <div class="caption">
+                <h3>Youri Gicquel</h3>
+                <p> En charge de la partie Compilateur</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2 col-md-3">
+        <div class="thumbnail">
+            <img src="https://cdn.local.epitech.eu/userprofil/profilview/mart_c.jpg" alt="Thomas Martin">
+            <div class="caption">
+                <h3>Thomas Martin</h3>
+                <p>En charge de la connectivité entre les parties API et Compilateur</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2 col-md-3" style="align-content: center">
+        <div class="thumbnail">
+            <img  src="https://cdn.local.epitech.eu/userprofil/profilview/favre_r.jpg" style="" alt="Romain Favre">
+            <div class="caption">
+                <h3>Romain Favre</h3>
+                <p>...</p>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
 
-<h3> Le projet en quelques mots ...</h3>
-<p> Son fonctionnement est simple: Il suffit d'entrer le code voulu dans l'éditeur prévu à cet effet (voir <a href="editor.html" style="color: grey">Editeur</a>) et d'envoyer son code au compilateur via le bouton COMPILER. Si le code est correct, la mention OK apparaitra, sinon KO.</p>
+<h3 style="font-weight: bold"> Pourquoi ce projet ? </h3>
+<p style="opacity: 0.75"> Cette interface web a été developpée dans le cadre d'un projet de fin de troisième année, impliquant un travail de groupe de plusieurs mois. Nous étions désireux de découvrir les technologies web et de developper un outil utile et performant.</p>
+<p style="opacity: 0.75"> C'est donc ainsi qu'est né notre projet.</p>
+
+<h3 style="font-weight: bold"> Le projet en quelques mots ...</h3>
+<p style="opacity: 0.75"> Son fonctionnement est simple: Il suffit d'entrer le code voulu dans l'éditeur prévu à cet effet (voir <a href="editor.html" style="color: grey">Editeur</a>) et d'envoyer son code au compilateur via le bouton COMPILER. Si le code est correct, la mention OK apparaitra, sinon KO.</p>
