--- a/web/app/views/editor.html
+++ b/web/app/views/editor.html
@@ -1,12 +1,9 @@
 <div ng-controller="editorCtrl">
-    <h2>Notre editeur de texte en ligne !</h2>
+
 
     <div class="row">
         <div class="col-md-8">
-            <div id="editor" style=" min-height: 600px; border: solid 3px gray;">void main()
-                {
-                }
-            </div>
+            <div id="editor" style=" min-height: 600px; border: solid 3px gray;"></div>
         </div>
         <div class="col-md-4 well">
             <div class="row">
