--- a/web/app/views/about.html
+++ b/web/app/views/about.html
@@ -1,52 +1,53 @@
 <h2 style="font-weight: bold" >A Propos</h2>
-<h3 style="font-weight: bold"> Qui sommes-nous ?</h3>
-<p style="opacity: 0.75"> Ce site web a été réalisé par <b>Youri Gicquel</b>, <b>Manon Delanoy</b>, <b>Thomas Martin</b> et <b>Romain Favre</b>, étudiants d'Epitech Lyon.</p>
-<p style="opacity: 0.75"> Epitech est une école d'expertise informatique et offre à ses étudiants un cursus en 5 ans. Tous les membres de ce projet sont en fin de troisième année.</p>
-
+<ul style = "list-style-type: none">
+<li><h3 style="font-weight: bold"> <span class="glyphicon glyphicon-user" ></span> Qui sommes-nous ? </h3></li>
+<p style="opacity: 0.85"> Ce site web a été réalisé par <b>Youri Gicquel</b>, <b>Manon Delanoy</b>, <b>Thomas Martin</b> et <b>Romain Favre</b>, étudiants d'Epitech Lyon.</p>
+<p style="opacity: 0.85"> Epitech est une école d'expertise informatique et offre à ses étudiants un cursus en 5 ans. Tous les membres de ce projet sont en fin de troisième année.</p>
+</br>
 <div class="row">
     <div class="col-md-12">
     <div class="col-sm-2 col-md-3">
-        <div class="thumbnail">
+        <div style="text-align: center">
             <img src="https://cdn.local.epitech.eu/userprofil/profilview/delano_m.jpg" alt="Manon Delanoy">
-            <div class="caption">
-                <h3>Manon Delanoy</h3>
-                <p> Chef de projet - en charge de la partie Front et Api</p>
-            </div>
+                <h4><b>Manon Delanoy</b></h4>
         </div>
     </div>
     <div class="col-sm-2 col-md-3">
-        <div class="thumbnail">
+        <div style="text-align: center">
             <img src="https://cdn.local.epitech.eu/userprofil/profilview/gicque_y.jpg" alt="Youri Gicquel">
-            <div class="caption">
-                <h3>Youri Gicquel</h3>
-                <p> En charge de la partie Compilateur</p>
-            </div>
+                <h4><b>Youri Gicquel</h4>
         </div>
     </div>
     <div class="col-sm-2 col-md-3">
-        <div class="thumbnail">
+        <div style="text-align: center">
             <img src="https://cdn.local.epitech.eu/userprofil/profilview/mart_c.jpg" alt="Thomas Martin">
-            <div class="caption">
-                <h3>Thomas Martin</h3>
-                <p>En charge de la connectivité entre les parties API et Compilateur</p>
-            </div>
+                <h4><b>Thomas Martin</h4>
         </div>
     </div>
     <div class="col-sm-2 col-md-3" style="align-content: center">
-        <div class="thumbnail">
+        <div style="text-align: center">
             <img  src="https://cdn.local.epitech.eu/userprofil/profilview/favre_r.jpg" style="" alt="Romain Favre">
-            <div class="caption">
-                <h3>Romain Favre</h3>
-                <p>...</p>
-            </div>
+                <h4><b>Romain Favre</h4>
         </div>
     </div>
     </div>
 </div>
 
-<h3 style="font-weight: bold"> Pourquoi ce projet ? </h3>
-<p style="opacity: 0.75"> Cette interface web a été developpée dans le cadre d'un projet de fin de troisième année, impliquant un travail de groupe de plusieurs mois. Nous étions désireux de découvrir les technologies web et de developper un outil utile et performant.</p>
-<p style="opacity: 0.75"> C'est donc ainsi qu'est né notre projet.</p>
-
-<h3 style="font-weight: bold"> Le projet en quelques mots ...</h3>
-<p style="opacity: 0.75"> Son fonctionnement est simple: Il suffit d'entrer le code voulu dans l'éditeur prévu à cet effet (voir <a href="editor.html" style="color: grey">Editeur</a>) et d'envoyer son code au compilateur via le bouton COMPILER. Si le code est correct, la mention OK apparaitra, sinon KO.</p>
+</br>
+<li><h3 style="font-weight: bold"> <span class="glyphicon glyphicon-sort-by-alphabet" ></span> Le projet en quelques mots ...</h3></li>
+<div style="opacity: 0.85;  font-weight: normal;"><p> Afin de saisir notre projet, il faut savoir qu’il est le commencement de notre EIP.
+En quelques mots, notre EIP consistera en l’élaboration d’une plateforme web ludico-éducative d’apprentissage de la programmation (c / c++) à destination d’un jeune public, de 10 à 16 ans environ.
+Pour notre PFA, nous avons décidé de mettre en place la base de notre EIP.</p>
+<p>Il s’agissait de la partie la plus primordiale, deux ans de travail se basant sur sa stabilité. Cette base consiste en un éditeur de code en ligne et d’un compilateur.
+L’utilisateur accède à une interface web où se trouve notre éditeur de code.(voir <a href="editor.html" style="color: grey">Editeur</a>)
+Il lui suffit d’entrer le code voulu et d’envoyer son code au compilateur via un bouton. Le compilateur traitera alors ce code et renverra OK ou KO. Si le code ne compile pas, l’utilisateur pourra voir s’afficher : KO ainsi que les erreurs et warnings éventuels. Si le code fonctionne convenablement, il sera affiché OK.
+Notre objectif était de proposer une interface épurée et aussi simple que possible.</p></div>
+</br>
+<li><h3 style="font-weight: bold"> <span class="glyphicon glyphicon-floppy-saved" ></span> Pourquoi ce projet ? </h3></li>
+<div style="opacity: 0.85;  font-weight: normal;"> <h4>L’idée de laquelle est né ce projet a débuté bien avant notre troisième année.</h4>
+<p>Amis et parfois binômes lors de nos projets Epitech, nous, Thomas, Youri et Manon, avons lancé une idée qui sur le moment n’était qu’une simple réflexion : Epitech regroupe des passionnés d’informatique qui s’investissent des heures entières dans leurs projets, pourquoi ne pas tenter de transmettre cette passion aux plus jeunes ? Pourquoi devoir attendre l’obtention du baccalauréat pour pouvoir réellement apprendre la programmation ?
+En effet, nous avions remarqué que si de nombreux tutoriels et autres sites web interactifs existaient sur internet, aucun n’était réellement accessible aux profanes, et encore moins aux enfants. A 10 ans, les concepts qui peuvent sembler évident aux adultes ne sont justement que de vagues concepts, insaisissables.</p>
+<p>Après de longues discussions, nous avons décidé de nous lancer dans l’aventure avec pour objectif de pouvoir présenter aux enseignants ou animateurs intéressés notre site dès 2017. La suite s’est enchaînée naturellement. Le Projet de fin de troisième année était l’occasion parfaite de présenter notre projet à l’équipe pédagogique ainsi qu’à quelques professionnels, et nous avons convenu que le PFA nous servirait à mettre en place les bases de notre projet et à découvrir les technologies qui nous serviraient lors des prochaines années de développement.</p>
+</div>
+<p style="opacity: 0.85;  font-weight: normal;"> C'est donc ainsi qu'est né notre projet.</p>
+</ul>
