--- a/web/app/views/editor.html
+++ b/web/app/views/editor.html
@@ -7,20 +7,20 @@
         </div>
         <div class="col-md-4 well">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-6">
                     <div class="col-md-4">
                 <button ng-click="comp()" type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok" ></span></button>
                     </div>
                     <div class="col-md-8">
-                        <p><b>Compiler</b></p>
+                        <p><b>Compile</b></p>
                     </div>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-6">
                     <div class="col-md-4">
                     <button ng-click="dest()" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" ></span></button>
                     </div>
                     <div class="col-md-8">
-                        <p><b>Vider l'editeur</b></p>
+                        <p><b>Clean</b></p>
                     </div>
                 </div>
             </div>
